--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Android3_7</string>
     <string name="title_activity_maps">Map</string>
+    <string name="show_polyline">show polyline</string>
+    <string name="delete_polyline">delete_polyline</string>
 </resources>
